Fix spacing

--- a/src/resources/css/cp.css
+++ b/src/resources/css/cp.css
@@ -99,12 +99,11 @@ table.editable th.code {
 }
 
 .blitz-diagnostics h1 {
-    padding-top: var(--s);
-    line-height: 34px;
+    margin-bottom: 0;
 }
 
 .blitz-diagnostics .recommendations h1 {
-    margin-bottom: 0;
+    padding-top: var(--xl);
 }
 
 .blitz-diagnostics .recommendations p > span {
